<resources>
    <string name="app_name">TorgiLands</string>
    <string name="plus">Plus</string>
    <string name="initial_output">Output will be here.</string>
    <string name="title_activity_land_list">Land list</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Add">Add</string>
    <string name="Header">Header</string>
    <string name="Price">Price</string>
    <string name="Square">Square</string>
    <string name="Type">Type</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="PARAM_ID" translatable="false">PARAM_ID</string>
    <string name="PARAM_HEADER" translatable="false">PARAM_HEADER</string>
    <string name="PARAM_PRICE" translatable="false">PARAM_PRICE</string>
    <string name="PARAM_SQUARE" translatable="false">PARAM_SQUARE</string>
    <string name="PARAM_TYPE" translatable="false">PARAM_TYPE</string>

    <string name="MESSAGE_WRONG_FORMAT_PRICE">Wrong format of price!</string>
    <string name="MESSAGE_WRONG_FORMAT_SQUARE">Wrong format of square!</string>
    <string name="INTERNAL_ERROR">An internal error occurred</string>

    <string name="PREFERENCE_FILE_NAME" translatable="false">text.xml</string>
</resources>