<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="ru.psu.mobile.torgilands.ui.activitylanddetail.CViewModelLandDetail" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activitylanddetail.CActivityLandDetails"
        android:orientation="vertical"
        android:background="@color/secondary"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Header"
            style="@style/CStyleInput"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.header}"
                android:textColor="@color/primary"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPrice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Price"
            style="@style/CStyleInput"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.price}"
                android:textColor="@color/primary"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldSquare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/Square"
            style="@style/CStyleInput"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.square}"
                android:textColor="@color/primary"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Type"
            style="@style/CStyleInput">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.type}"
                android:textColor="@color/primary"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/save"
                app:icon="@drawable/baseline_save_24"
                android:layout_weight="1"
                style="@style/CStyleButton"
                />
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                app:icon="@drawable/baseline_cancel_24"
                android:layout_weight="1"
                style="@style/CStyleButton"
                />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>